bug fix: fix skin-readable's readability issue

--- a/theme.less
+++ b/theme.less
@@ -97,3 +97,12 @@ a {
 #category-no-topics {
 	margin-top: 15px;
 }
+
+// dirty hack for fixing skin-readable's readability issues
+
+.skin-readable button {
+	color: #777;
+}
+.skin-readable button:hover {
+	color: darken(#777, 10%);
+}
